add prettier eslint configs

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 .DS_Store
 node_modules
+dev_process
 packages/.idea
 packages/vue_ts-composition_api-20221506-demo_project-japanese_sweets_store-spa/node_modules
 packages/vue_ts-composition_api-20221506-demo_project-japanese_sweets_store-spa/dist
