--- a/packages/vue_ts-composition_api-20221506-demo_project-japanese_sweets_store-spa/package.json
+++ b/packages/vue_ts-composition_api-20221506-demo_project-japanese_sweets_store-spa/package.json
@@ -10,7 +10,9 @@
   "dependencies": {
     "core-js": "^3.8.3",
     "vue": "^3.2.13",
-    "vue-router": "^4.0.3"
+    "vue-router": "^4.0.3",
+    "pinia": "^2.0.14",
+    "vue-uuid": "^3.0.0"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.4.0",
