--- a/packages/vue_ts-composition_api-20221506-demo_project-japanese_sweets_store-spa/package.json
+++ b/packages/vue_ts-composition_api-20221506-demo_project-japanese_sweets_store-spa/package.json
@@ -8,15 +8,17 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.27.2",
     "core-js": "^3.8.3",
+    "pinia": "^2.0.14",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3",
-    "pinia": "^2.0.14",
     "vue-uuid": "^3.0.0"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.4.0",
     "@typescript-eslint/parser": "^5.4.0",
+    "@vicons/ionicons5": "^0.12.0",
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-eslint": "~5.0.0",
     "@vue/cli-plugin-router": "~5.0.0",
@@ -27,9 +29,11 @@
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-vue": "^8.0.3",
+    "naive-ui": "^2.30.5",
     "prettier": "^2.4.1",
     "sass": "^1.32.7",
     "sass-loader": "^12.0.0",
-    "typescript": "~4.5.5"
+    "typescript": "~4.5.5",
+    "vfonts": "^0.0.3"
   }
 }
